# sermon-uploader

./: .gitignore  README.md  api.rb  audio.hs  audio.rb  audio2.hs  booknames.txt  cmd.rb  config.rb  create.sh  cron.rb  crontab.txt  file.rb  gen.rb  gui.rb  hellersdorf.yaml  hellersdorf.yml  import.rb  main.rb  metadata.rb  parts.rb  ref.rb  register.rb  spect.sh  strings.rb  upload.bat  upload.rb  upload.sh
fft/: CMakeLists.txt  FindGSL.cmake  first.sh  main.cpp  rebuild.sh
fft/lib/: CMakeLists.txt
parts/: local.rb  ssh.rb
